# Water-Allocation-Institution

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  makefile  pyproject.toml  requirements.txt  test.ipynb  test.yaml
87_all_wci/results/: 87aw_diff.csv
95%pca-97/results/: 95%pca-97_diff.csv
95%pca-98/results/: 95%pca-98_diff.csv
98_all_wci/results/: 98aw_diff.csv
config/: 87_all_wci.yaml  synth.yaml
config/db/: dataset.yaml
config/figs/: local.yaml
config/policy/: policy_87.yaml  policy_98.yaml
config/vars/: pca.yaml
core/: __main__.py  analysis.py  datasets.py  experiment.py  handle.py  model.py  overall_analysis.py  plots.py  synth.py  unit_base.py
core/model/: analysis.py  datasets.py  unit_base.py
core/src/: __init__.py  filter_features.py  multi_synth.py  pca.py  plots.py  tools.py
docs/drafts/: abstract.md  abstract.tex  cov_letter.md
docs/papers/: WAInstitution_YRB_2021.bib  authors.md  extracted.bib  info.tex  keywords.tex  make.sh  manuscript.tex  metadata.yaml  mybib.bib  mydoc.docx  naturemag.bst  nsr.cls  paper.py  title.tex
docs/papers/00_cover_letter/: abstract.tex  cover_letter.tex  keyword.tex  title.tex
docs/papers/01_manuscript/: 01_introduction.tex  02_institution.tex  02_results.tex  02_structures.tex  03_causes.tex  03_results.tex  04_discussion.tex  05_conclusion.tex  06_methods.tex  abstract.tex  drafs.tex  elsarticle-num.bst  elsarticle-template.tex  keywords.tex  manuscript.fff  manuscript.lot  manuscript.tex  manuscript.ttt  manuscript_v-7.1.2.tex  manuscript_v-7.2.2.tex  (+6 more)
func/: experiment.py  handle.py  model.py  plots.py  tools.py
main/modules/: experiment.py
model/: 85%pca-87.yaml  85%pca-98.yaml  95%pca-87.yaml  95%pca-98.yaml  98_all_wci.yaml  normalized_87.yaml  normalized_98.yaml
multiply/: multiply.yaml
notebooks/: 00_NaturalVars.ipynb  01_DatasetClean.ipynb  02_DataProcessing.ipynb  02_PCA.ipynb  03_SynthControl.ipynb  04_ContextPlotting.ipynb  Appendix_S3.ipynb  Untitled.ipynb  compare_RMSE.csv  economic_model.ipynb  playground.ipynb
reports/: 1987_exp.yaml  1987_urb.yaml  1987_wci.yaml  1987_yzr.yaml  1987_yzr_wci.yaml  1998_exp.yaml  1998_urb.yaml  1998_wci.yaml  1998_yzr.yaml  1998_yzr_wci.yaml  87_all_agr.yaml  87_all_ind.yaml  87_gpd.yaml  98_all_agr.yaml  98_all_ind.yaml  exp_1987_for_playing.yaml
reports/1987/: 78_all_87.yaml  78_yzr_87.yaml
reports/1998/: all_98.yaml  yzr_98.yaml
reports/n1987/: 87_all_gdp.yaml  87_all_wci.yaml  87_yzr_gdp.yaml  87_yzr_wci.yaml
reports/n1998/: 98_all_gdp.yaml  98_all_wci.yaml  98_yzr_gdp.yaml  98_yzr_wci.yaml
test/: basic.csv  multiply.yaml
test/testing/: test_data.csv
tests/: test_features.py  test_units.py
(+54 files in other folders)
