[tool.poetry]
name = "wainstitution-yrb-2021"
version = "0.1.0"
description = "Water quota influences in the yellow river basin"
authors = ["Shuang Song <songshgeo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wainstitution_yrb_2021"}]

[tool.poetry.dependencies]
python = "^3.11"
xarray = "^2023.2.0"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
pandas = "^1.5.3"
geopandas = "^0.12.2"
pyyaml = "^6.0"
tqdm = "^4.64.1"
syntheticcontrolmethods = "^1.1.17"
pca = "^1.9.1"
pingouin = "^0.5.3"
rasterio = "^1.3.6"
pygam = "^0.8.0"
bidict = "^0.22.1"
prettytable = "^3.6.0"
cos = { git = "git@github.com:SongshGeo/tencent-cos-manipulations.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
allure-pytest = "^2.12.0"
ipykernel = "^6.21.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
nbstripout = "^0.6.1"
pydocstyle = "^6.3.0"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
